2024-06-19 Konstantin Kushnir <chpock@gmail.com>
	* Add support for specifying the compression level
	* Add minor fixes to documentation according to recent changes
	* Fix possible crash with malformed archives

2024-06-18 Konstantin Kushnir <chpock@gmail.com>
	* Add multi-threading support

2024-06-07 Konstantin Kushnir <chpock@gmail.com>
	* Improve error handling
	* Thread support preparation: eliminate Tcl_Obj usage for paths
	* Thread support preparation: eliminate Tcl_Obj usage for vfs
	* Thread support preparation: eliminate Tcl_Obj usage for fsindex metadata

2024-06-07 Konstantin Kushnir <chpock@gmail.com>
	* Thread support preparation: eliminate Tcl_Obj usage by pages object

2024-06-06 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 1.7.0

2024-06-06 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 1.6.0

2024-06-03 Konstantin Kushnir <chpock@gmail.com>
	* Provide proper operation between interps for c-vfs
	* Fix a bug with unmounting volumes

2024-06-02 Konstantin Kushnir <chpock@gmail.com>
	* Don't allow deleting pages/fsindex that are in use
	* Optimize c-readerchannel
	* Add a full-featured mount command for use from C
	* Fix debug build on 32-bit platforms

2024-06-01 Konstantin Kushnir <chpock@gmail.com>
	* Add in-memory vfs feature
	* Change XZ format to plain LZMA
	* Remove sha1/sha256 hash functions
	* Add a simple mount command for use from C

2024-05-31 Konstantin Kushnir <chpock@gmail.com>
	* Fix build and tests for Windows platform
	* Add support for attributes
	* Fix build with --disable-xz

2024-05-30 Konstantin Kushnir <chpock@gmail.com>
	* Fix multiple memory leaks
	* Add feature to build without Tcl commands
	* Add support for Tcl 9.0
	* Treat compiler warnings as errors

2024-05-29 Konstantin Kushnir <chpock@gmail.com>
	* Fix a regression when register volume and unregister with vfs::unmount
	* Add memory leak hunter to tests

2024-05-28 Konstantin Kushnir <chpock@gmail.com>
	* Add cppcheck
