@@ -203,7 +203,7 @@ See [sectref {COOKFS STORAGE}] for more details on how cookfs stores files, inde
 [def "[option -volume]"]
 Register mount point as Tcl volume - useful for creating mount points in locations that do not exist - such as [arg archive://].
 
-[def "[option -compression] [arg {none|zlib|bz2|lzma|custom}][opt :[arg level]]"]
+[def "[option -compression] [arg {none|zlib|bz2|lzma|zstd|custom}][opt :[arg level]]"]
 
 Compression to use for storing new files.
 
@@ -361,6 +361,10 @@ cookfs. Compression levels can be from 1 to 9.
 [item] [const lzma] -
 use lzma for compression; requires specifying [const {--enable-lzma}] when building
 cookfs. Compression levels can be from 0 to 9.
+
+[item] [const zstd] -
+use Zstandard for compression; requires specifying [const {--enable-zstd}] when building
+cookfs. Compression levels can be from 1 to 22.
 
 [item] [const custom] -
 use Tcl commands for compressing and decompressing pages. The compression level
