@@ -93,6 +93,7 @@ static Tcl_Config const cookfs_pkgconfig[] = {
     {"feature-aside",    STRINGIFY(COOKFS_PKGCONFIG_FEATURE_ASIDE)},
     {"feature-bzip2",    STRINGIFY(COOKFS_PKGCONFIG_USEBZ2)},
     {"feature-lzma",     STRINGIFY(COOKFS_PKGCONFIG_USELZMA)},
+    {"feature-zstd",     STRINGIFY(COOKFS_PKGCONFIG_USEZSTD)},
     {"feature-metadata", STRINGIFY(COOKFS_PKGCONFIG_FEATURE_METADATA)},
     {"tcl-commands",     STRINGIFY(COOKFS_PKGCONFIG_USETCLCMDS)},
     {NULL, NULL}
