@@ -1,3 +1,6 @@
+2024-06-20 Konstantin Kushnir <chpock@gmail.com>
+	* Add support for Zstandard compression
+
 2024-06-19 Konstantin Kushnir <chpock@gmail.com>
 	* Add support for specifying the compression level
 	* Add minor fixes to documentation according to recent changes
